tests/samples/negative/functions/function_name_as_value.ax
module function_name_as_value;

fn value() -> i32 {
  return 7;
}

fn main() -> i32 {
  return value;
}
